[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "opvault-demo"
version = "0.0.1"
dependencies = [
    'importlib-metadata; python_version<"3.11"',
    'verystable@git+https://github.com/jamesob/verystable',
    'bip32',
    'clii',
    'rich',
]

[project.scripts]
opvault-demo = "main:main"
